--- a/src/views/not-found.ejs
+++ b/src/views/not-found.ejs
@@ -6,14 +6,16 @@
 </head>
 <body>
     <%- include('./partials/header')  %> 
-    <main>
-        <section>
-            <h2>404 Ups!</h2>
-            <p>Pagina no encontrada</p>
-            <p>
-                Para regresar a la pagina principal haga click <a href="/home">aquí</a>
-            </p>
-                
+    <main class="bgcAzul paddingTB">
+        <section class="flex justCenter">
+            <article>
+                <h1 class="textC blanco">404 Ups!</h1>
+                <p class="textC blanco">Pagina no encontrada</p>
+                <p class="textC blanco">
+                    Para regresar a la pagina principal haga click <a href="/home" class="cian">aquí</a>
+                </p>
+            </article>
+            <img src="/images/beistore/image-not-found.png" alt="pagina no encontrada">  
         </section>
     </main>
 
