--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,16 +1,19 @@
 <footer class="bgcVioleta flex justAround">
-    <section class="blanco textFamily textC flex justAround info">
+    <section class="textFamily textC flex justAround info">
         <article class="marginTB">
-            <h4 class="title">Titulo</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum necessitatibus modi fugiat.</p>
+            <i class="fas fa-tags"></i>
+            <h4 class="title">Descuentos </h4>
+            <p>Encontrá las mejores ofertas y descuentos todas las semanas. ¡Hacé tus compras online!</p>
         </article>
         <article class="marginTB">
-            <h4 class="title">Titulo</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum necessitatibus modi fugiat.</p>
+            <i class="fas fa-truck-moving"></i>
+            <h4 class="title">Envios a todo el Pais</h4>
+            <p>Envios gratis a todo el pais con tu compra de $2500 o más.</p>
         </article>
         <article class="marginTB">
-            <h4 class="title">Titulo</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum necessitatibus modi fugiat.</p>
+            <i class="fas fa-credit-card"></i>
+            <h4 class="title">Medios de pago</h4>
+            <p>Tarjeta de credito y debito. Los pagos se realizan por medio de mercado pago</p>
         </article>
     </section>
     <section class="blanco textFamily marginTB redes">
