--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header class="bgcVioleta flex justAround paddingTB" >
     <a href="/home">
-        <img src="/images/logo.png" alt="logo" class="widthFull" >
+        <img src="/images/beistore/beistore-text.png" alt="logo" class="widthFull" >
     </a>
     <form action="/" method="GET" class="flex justBet widthHalf">
         <input type="text" name="search" placeholder="Buscar" class="widthFull borderRadius">
@@ -10,7 +10,10 @@
     </form>
     <nav class="widthFull marginTB">
         <ul class="widthFull flex justAround">
-            <li><a href="/users/login" class="blanco title"><i class="fas fa-user"></i>Cuenta</a></li>
+            <li><a href="/users/login" class="blanco title">
+                <i class="fas fa-user"></i>
+                <%= locals.isLogged? locals.userLogged.firstName : 'Cuenta' %>
+            </a></li>
             <li><a href="/products/cart" class="blanco title"><i class="fas fa-shopping-cart"></i>Carrito</a></li>
         </ul>
     </nav>
