--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -3,12 +3,20 @@
 
 /* etiquetas base */
 img{width: 100%;}
+
+.image{
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    border: 3px solid #3805F2;
+    box-shadow: 0px 0px 20px #00081f ;
+}
 main{
     display: flex; 
     justify-content: space-around; 
     flex-flow: wrap row; 
     width: 100%;
-    min-height: 60vh;
+    min-height: 70vh;
 }
 
 main section{width: 90%;}
@@ -62,6 +70,7 @@ main section{width: 90%;}
     font-weight: bold;
     margin: 10px 0px;
     transition: all .35s;
+    max-height: 38px;
 }
 
 .btnRosa{
@@ -69,6 +78,7 @@ main section{width: 90%;}
     border-radius: 8px;
     width: 100%;
     padding: 10px;
+    max-height: 38px;
     background-color: #F20789;
     color: #fff;
     font-weight: bold;
@@ -87,7 +97,7 @@ main section{width: 90%;}
 .textL{text-align: left;}
 .textC{text-align: center;}
 .textFamily{font-family: 'Roboto', sans-serif; }
-
+.mys::first-letter { text-transform: uppercase;}
 
 /* card de productos */
 .card-product{
