--- a/public/styles/not-found.css
+++ b/public/styles/not-found.css
@@ -1,27 +1,18 @@
-main{
-    background-color: #021140;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    height: 70vh;
-    width: 100%;
-    padding: 25px 0px;
+
+main section h1{
+    font-weight: bold;
+    font-size: 4.5rem;
+    margin-bottom: 20px;
 }
 main section{
-    width: 90%;
-}
-
-main section h2{
-    color: #fff;
-    font-weight: bold;
-    font-size: 2.5rem;
-    text-align: center;
+    max-width: 790px;
+    align-items: flex-start;
 }
 
 section p{
-    color: #fff;
     font-size: 1.2rem;
+    margin: 10px 0px;
 }
-a{
-    color: #57F2F2;
+img{
+    margin-top: 15px;
 }
