--- a/public/styles/productView.css
+++ b/public/styles/productView.css
@@ -25,8 +25,29 @@ main section{
 .product{
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: flex-start;
+}
+.product form{
+    width: 100%;
+}
+.product form fieldset{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.product form input{
+    width: 20%;
+    padding: 10px;
+    border: 0px;
+    border-radius: 8px;
+    background-color: #fff;
+    margin: 5px 0px;
+}
+.product form label{
+    color: #fff;
+    font-weight: bold;
 }
 h2{
     font-weight: bold;
@@ -37,6 +58,12 @@ h2{
 }
 h2::first-letter {
     text-transform: uppercase;
+}
+.descripcion {
+    width: 100%;
+    margin-top: 8px;
+    color: #fff;
+    margin-bottom: 8px;
 }
 
 .name-dato, .dato{
@@ -66,10 +93,8 @@ main section article button{
     border-radius: 8px;
     border: 0px;
 }
-.description p{
-    margin-top: 8px;
-    color: #fff;
-}
+
+
 
 @media (min-width: 768px){
     .product article{
