--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -7,15 +7,14 @@
 <body>
     <%- include('./partials/header')  %> 
     <main class="flex justCenter">
-        <img src="/images/banner.jpg" alt="banner" class="widthFull">
+        <img src="/images/beistore/banner.jpg" alt="banner" class="widthFull">
         <!-- categorias -->
         <section class="category flex justAround">
             <h2 class="title textL widthFull marginTB">Categorias</h2>
-            <% let categorias = ['Destacado', 'PC', 'otra categoria', 'otra categoria', 'otra categoria'] %> 
-            <% categorias.forEach(element => { %>
+            <% categories.forEach(element => { %>
                 <article class="flex justCenter textC">
                     <img src="/images/categorias/articulo1.jpg" alt="articulo">
-                    <a href="/" class="blanco bgcAzul widthFull title padding"><%= element  %></a> 
+                    <a href="/" class="blanco bgcAzul widthFull title padding mys"><%= element  %></a> 
                 </article>
             <% }) %>
         </section>
