--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -2,6 +2,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://kit.fontawesome.com/c055fe99e8.js" crossorigin="anonymous"></script>
+<link rel="apple-touch-icon" sizes="180x180" href="/images/beistore/favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/beistore/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/beistore/favicon_io/favicon-16x16.png">
 <link rel="stylesheet" href="/styles/normalize.css">
 <link rel="stylesheet" href="/styles/reset.css">
 <link rel="stylesheet" href="/styles/header.css">
