--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -7,25 +7,35 @@
 <body>
     <%- include('../partials/header')  %>    
     <main>
-        <section class="product">
-            <article>
-                <img src="/images/productos/<%=producto.image[0]%>" alt="imagen del producto">     
-            </article>
-            <article class="informacion-de-pago">    
-                <h2 class="name-producto"><%= producto.name %></h2>  
-                <p class="name-dato">Precio</p>             
-                <p class="dato">$<%= producto.price %></p>
-                <p class="name-dato">Descuento</p>             
-                <p class="dato"> <%= producto.descuento %>% </p>
-                <button type="submit">Agregar al Carrito</button>
-            </article>
-        </section>
-        <section class="description">
-             <article>
-                <h2>Descripción de producto</h2>
-                <p><%= producto.descrition %></p>
-            </article>
-        </section>
+        <% if (producto) { %>
+         
+            <section class="product">
+                <article>
+                    <img src="/images/productos/<%=producto.images[0].name%>" alt="imagen del producto">     
+                </article>
+                <article class="informacion-de-pago">    
+                    <h2 class="name-producto"><%= producto.name %></h2>  
+                    <p class="descripcion"><%= producto.description %> </p>
+                    <p class="name-dato">Precio</p>             
+                    <p class="dato">$<%= producto.price %></p>
+                    <p class="name-dato">Descuento</p>             
+                    <p class="dato"> <%= producto.off %>% </p>
+                    <form action="/products/cart/upload" method="POST" enctype="multipart/form-data">
+                        <fieldset>
+                            <label for="quantity">Cantidad del producto: </label>
+                            <input type="number" name="quantity" min="1" value="1" id="quantity" required>
+                            <input type="hidden" name="id" value="<%= producto.id %>" >
+                        </fieldset>
+                        <button type="submit">Agregar al Carrito</button>
+                    </form>
+                </article>
+            </section>
+        <% } else { %>
+            <section>
+                <p class="blanco title "><%= error %></p> 
+            </section>
+        <% } %>
+         
     </main>
     <%- include('../partials/footer') %> 
 </body>
