--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -8,12 +8,26 @@
     <%- include('../partials/header')  %>
     <main>
         <section>
-            <form action="" method="POST">
-                <fieldset>
-                    <input type="text" name="user" id="user" placeholder="Nombre de Usuario">
+            <form method="POST" action="login" enctype="multipart/form-data" id="login">
+                <fieldset class=" <%= locals.errores && locals.errores.email ? 'error': '' %>  ">
+                    <input type="email" name="email" id="user" placeholder="Email"
+                        value ="<%= locals.oldData && oldData.email ? oldData.email: ''%>"
+                    >
+                    <i class="fas fa-exclamation-circle"></i>
+                    <small> <%=  locals.errores && locals.errores.email ? errores.email.msg : '' %>  </small>
                 </fieldset>
-                <fieldset>
+
+                <fieldset class=" <%= locals.errores && locals.errores.password ? 'error': '' %>">
                     <input type="password" name="password" id="password" placeholder="Contraseña">
+                    <i class="fas fa-exclamation-circle"></i>
+                    <small><%=  locals.errores && locals.errores.password ? errores.password.msg : '' %>  </small>
+                </fieldset>
+
+                <fieldset>
+                    <label>
+                        <input type="checkbox" name="remember">
+                        Recordarme
+                    </label>
                 </fieldset>
                 <button type="submit" class="btnRosa">Ingresar</button>
             </form>
@@ -21,5 +35,6 @@
         </section>
     </main>
     <%- include('../partials/footer') %> 
+    <script src="/js/users/loggedValidation.js"></script>
 </body>
 </html>
